--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
     - cd ss-ms1
     - git config user.email "travis@travis-ci.org"
     - git config user.name "Travis CI"
-    - cat "$RAMDOM" > ./TRAVIS_COMMIT
+    - echo "$RAMDOM" > ./TRAVIS_COMMIT
     - git commit -am '[TRAVIS AUTOMATICALLY COMMIT]'
     - git push origin master
 
