--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
+after_success: 
+- echo 1111
+- echo "$TEST_SECURE"
+- echo 1111
+- mkdir -p ~/.ssh
+- cp ./sshconfig ~/.ssh/config
+- git clone git@github.com:littleq0903/ss-ms1.git
+- ls
+- cd ss-ms1
+- git config user.email "travis@travis-ci.org"
+- git config user.name "Travis CI"
+- echo "$RANDOM" > ./TRAVIS_COMMIT
+- git commit -am '[TRAVIS AUTOMATICALLY COMMIT]'
+- git push origin master
+script: 
+- pyflakes tests/*.py
+install: 
+- pip install pyflakes
+env: 
+  global: 
+    secure: NROQRUviVOR3eLKHuwUrrS/X/q6CsLNkQcQkXyqNdajSz0ILmHPPCABNQG7mXEBHALHBtjRUUYFIZsURP5JMariRirE0/twbbgrDfwjV88kJ0duYnYsHQq3Y/wnhUu2hJSo3B101IHcQZNTn6eKRQSrgkW5IJmQcbriwiRvkhfM=
+python: 
+- "2.7"
 language: python
-python:
-    - "2.7"
-install:
-    - pip install pyflakes
-script:
-    - pyflakes tests/*.py
-after_success:
-    - echo "secured content: $TEST_SECURE"
-    - mkdir -p ~/.ssh
-    - cp ./sshconfig ~/.ssh/config
-    - git clone git@github.com:littleq0903/ss-ms1.git
-    - ls
-    - cd ss-ms1
-    - git config user.email "travis@travis-ci.org"
-    - git config user.name "Travis CI"
-    - echo "$RANDOM" > ./TRAVIS_COMMIT
-    - git commit -am '[TRAVIS AUTOMATICALLY COMMIT]'
-    - git push origin master
-env:
-    global:
-        - secure: "7/PbOUrwvPrIkH0Jezqj+Z2Xl1Z1CTVKFIj8SCH1ApX3/8BdWpP5OyAZsonLgRsXUIS0Qthm84YQDV8uG2lKVycbOvIeNTVkj/ZVH7WddF3eASwQlYq7y+WNGR+p0fJ/wmDhibwUdGUmRnqpqvp0/+7+/Zk+Apvm7ofTJqUx6Yo="
