--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 after_success: 
 - mkdir -p ~/.ssh
 - scripts/decrypt.sh $PRIVATE_SALT ./encrypted_deploy_key.priv > ~/.ssh/id_rsa
+- chmod 400 ~/.ssh/id_rsa
 - cp ./sshconfig ~/.ssh/config
 - git clone git@github.com:littleq0903/ss-ms1.git
 - ls
